# crewai-test

eda_crew/: README.md  __init__.py  app.py  crew.py  main.py  test_csv.py
eda_crew/tools/: __init__.py  csv_tool.py  report_tool.py
news_crew/: README.md  agents.yaml  app.py  config.yaml  main.py  pyproject.toml  requirements.txt  tasks.yaml
news_crew/tools/: report_generator.py  search_tools.py
